Update Minutes - 2025-09-17.md

--- a/Documentation/Meeting Minutes/Minutes - 2025-09-17.md
+++ b/Documentation/Meeting Minutes/Minutes - 2025-09-17.md
@@ -14,3 +14,11 @@ Date: 09-17-2025
 
 * Questions for Storm
   1. What skills should we be looking to learn?
+
+
+Date: 09-22-2025
+* Reviewed each member's contributions to the Project Proposal
+* Discussed some implementation and design in regards to Budget and Specifications section
+
+* Questions for Storm
+  2. How can we best get in contact with Van Este?
