Update Minutes - 2025-09-17.md

--- a/Documentation/Meeting Minutes/Minutes - 2025-09-17.md
+++ b/Documentation/Meeting Minutes/Minutes - 2025-09-17.md
@@ -12,12 +12,16 @@ Date: 09-17-2025
 * Reviewed rough draft of project proposal and merged different sections
 * Made plan to contact two potential customers by midnight: the Student Success Center and the Table (Cookeville board game lounge).
 
+* Questions for Storm
+  1. How can we best get in contact with Van Neste?
+
 
 Date: 09-22-2025
 * Reviewed each member's contributions to the Project Proposal
 * Discussed some implementation and design in regards to Budget and Specifications section
 * Potential Standards to add to Project Proposal: IEEE 12207 (Embedded Systems), MISARA-C (safe C Programming)
 
-* Questions for Storm
-  1. How can we best get in contact with Van Este?
-  2. What skills should we be looking to learn?
+* Team Leader planned to update standards and reach back out to customers on Monday.
+* All members planned to get iMakerspace certified by Wednesday.
+* Plans to pick team name, put down contributors (and push proposal), and visit Student Success Center in person on Wednesday.
+* Wait on Storm to contact Van Neste.
