Update Minutes - 2025-09-24.md

--- a/Documentation/Meeting Minutes/Minutes - 2025-09-24.md
+++ b/Documentation/Meeting Minutes/Minutes - 2025-09-24.md
@@ -4,8 +4,12 @@ Date: 09-24-2025
 * Decided on a name for our project
 * Added contributions to Project Proposal
 * Pushed Project Proposal to main branch
-
-* Questions to ask Storm:
-  1. Should we start conceptual design the week of 9/29?
- 
 * Plan to set aside meeting time for Team Bob (team bonding activity)
+
+
+* Date: 09-29-2025
+
+* Made fixes to project proposal based on instructor feedback.
+* Questions to ask Storm:
+  1. Should we add protoyping costs to budget? If so, should we make a new table or add it to the original table?
+  2. What is a good approach to formalizing skills learned?
