Update Minutes - 2025-09-24.md

--- a/Documentation/Meeting Minutes/Minutes - 2025-09-24.md
+++ b/Documentation/Meeting Minutes/Minutes - 2025-09-24.md
@@ -7,7 +7,7 @@ Date: 09-24-2025
 * Plan to set aside meeting time for Team Bob (team bonding activity)
 
 
-* Date: 09-29-2025
+Date: 09-29-2025
 
 * Made fixes to project proposal based on instructor feedback.
 * Questions to ask Storm:
