Update Minutes - 2025-10-1.md

--- a/Documentation/Meeting Minutes/Minutes - 2025-10-1.md
+++ b/Documentation/Meeting Minutes/Minutes - 2025-10-1.md
@@ -3,3 +3,13 @@ Date: 10-1-2025
 
 * Revised Project Proposal and resubmitted
 * Looked for Van Neste in his shop
+
+Date: 10-6-2025
+
+* Discussed due dates for Conceptual Design (attempt to have done by Monday Oct. 20th)
+* Assigned portions for first week of work:
+1. NATHAN: Introduction, High-Level Solution: Block Diagram, Evaluations
+2. ALLISON: Restating the Problem, High-Level Solution: Block Diagram, Key Features
+3. NOAH: Industrial Solutions, Analysis of Solutions
+4. LEWIS: DIY Solutions, Analysis of Solutions
+5. JACK: High-Level Solution: Flow Chart, Key Features
