--- a/Documentation/Meeting Minutes/Minutes - 2025-10-13.md
+++ b/Documentation/Meeting Minutes/Minutes - 2025-10-13.md
@@ -1,10 +1,7 @@
 ## Meeting Minutes
 Date: 10-13-2025
 
-* Cancelled Wednesday's meeting(?)
+* Cancelled Wednesday's meeting, scheduled Team Bob-ding activity
 * Discussed work done so far on Conceptual Design for each member
-* Delay finishing until next wed???
-
-
-* Storm Questions:
-1.) Ask about description of hardware block diagram (high level solutions)
+* Assigned revamp work for Noah and Jack
+* Assigned work on remaining Conceptual Design sections for Lewis, Allison, and Nathan
