Update Minutes - 2025-10-20.md

--- a/Documentation/Meeting Minutes/Minutes - 2025-10-20.md
+++ b/Documentation/Meeting Minutes/Minutes - 2025-10-20.md
@@ -2,7 +2,12 @@
 Date: 10-20-2025
 
 * Made sure Conceptual Design had all member parts merged into it
-* Talked about Division of Labor
+* Talked about Division of Labor:
+  1. Allison: CoreXY
+  2. Nathan: Peripherals
+  3. Lewis: Power
+  4. Noah: Computing Unit
+  5. Jack: Processing Unit
 
 * Questions for Storm:
-* 1. Can we submit Conceptual Design to Storm for grammatical and format edits before submitting to Van Neste for content review?
+  1. Is our proposed Division of Labor fair?
