Update Minutes - 2025-10-20.md

--- a/Documentation/Meeting Minutes/Minutes - 2025-10-20.md
+++ b/Documentation/Meeting Minutes/Minutes - 2025-10-20.md
@@ -11,3 +11,11 @@ Date: 10-20-2025
 
 * Questions for Storm:
   1. Is our proposed Division of Labor fair?
+ 
+Date: 10-22-2025
+
+* Assigned Lewis the task of fixing code-styled wrap around text
+* Planned to send Conceptual Design to Storm after minor fixes
+* Planned to talk to Van Neste about Concept Render image (likely too early for this step in the overall process)
+
+* Planned to go over Detailed Design requirements on Monday
