Update Minutes - 2025-10-27.md

--- a/Documentation/Meeting Minutes/Minutes - 2025-10-27.md
+++ b/Documentation/Meeting Minutes/Minutes - 2025-10-27.md
@@ -4,8 +4,12 @@ Date: 10-27-2025
 * Planned to get Conceptual Design returned for re-review by Wednesday
 * Planned to go over Detailed Design overview on Wednesday
 
+* Make sure diagrams have large text and are at least 300dpi (use Gimp to export as needed)
+
 * Questions for Storm:
   1. What text should be larger on hardware block diagram and/or should image be less pixelated?
   2. What makes a source necessary to add to the document?
   3. What kind of images are you looking for (component images, renders, etc.)?
   4. What kind of table are you looking for each subsystem comparison (trade study inconclusive format)?
+ 
+  
