Update Minutes - 2025-10-27.md

--- a/Documentation/Meeting Minutes/Minutes - 2025-10-27.md
+++ b/Documentation/Meeting Minutes/Minutes - 2025-10-27.md
@@ -12,4 +12,18 @@ Date: 10-27-2025
   3. What kind of images are you looking for (component images, renders, etc.)?
   4. What kind of table are you looking for each subsystem comparison (trade study inconclusive format)?
  
+
+Date: 10-29-2025
+
+* Confirmed corrections and assigned minor edits to project name and citations to Nathan
+
+* Questions for Van Neste:
+  1. Confirm magnetism options (small physical "twist" magnet or small electromagnet)
+  2. Follow up with board size (size of each square: assume piece size is flexible)
+  3. Ideas for resetting board (speed and time)
+  4. Bounce off ideas of screen and microphone (see below)
+  5. Board:                     Player 1
+            discard pool -> playing field 8x8 -> microphone + screen
+                                 Player 2
+ 
   
