--- a/Documentation/Meeting Minutes/Minutes - 2025-10-27.md
+++ b/Documentation/Meeting Minutes/Minutes - 2025-10-27.md
@@ -22,10 +22,7 @@ Date: 10-29-2025
   2. Confirm magnetism options (small physical "twist" magnet or small electromagnet)
   3. Follow up with board size (size of each square: assume piece size is flexible)
   4. Ideas for resetting board (speed and time)
-  5. Bounce off ideas of screen and microphone (see below)
-  6. Board:                     Player 1
-            discard pool -> playing field 8x8 -> microphone + screen
-                                 Player 2
+  5. Bounce off ideas of screen and microphone: (layout left to right: discard pool -> playing field 8x8 -> microphone + screen)
 
 * Questions for Storm:
   1. Ask about how to neatly divide work and work together
