Update Minutes - 2025-11-5.md

--- a/Documentation/Meeting Minutes/Minutes - 2025-11-5.md
+++ b/Documentation/Meeting Minutes/Minutes - 2025-11-5.md
@@ -3,3 +3,10 @@ Date: 11-05-2025
 
 * Planned for each person to break down subsystem into smaller components (general). Lewis with Power does not have to do as much until receiving confirmation from the rest of the group.
 *  Will discuss subsystems on Monday
+
+
+Date: 11-10-2025
+
+* All members (save for Lewis) complete Interface with Others section, so that Lewis (in charge of power) can start working more efficiently on his documentation.
+* Wednesday meeting focus on Interfaces (group up together)
+* Have Interfaces and Diagrams sections finished by Monday
