Update Minutes - 2025-11-5.md

--- a/Documentation/Meeting Minutes/Minutes - 2025-11-5.md
+++ b/Documentation/Meeting Minutes/Minutes - 2025-11-5.md
@@ -8,5 +8,5 @@ Date: 11-05-2025
 Date: 11-10-2025
 
 * All members (save for Lewis) complete Interface with Others section, so that Lewis (in charge of power) can start working more efficiently on his documentation.
-* Wednesday meeting focus on Interfaces (group up together)
+* Wednesday meeting focus on Interfaces (group up together). Refer to feedback from Van Neste and notes from Storm.
 * Have Interfaces and Diagrams sections finished by Monday
