--- a/Documentation/Meeting Minutes/Minutes - 2025-11-5.md
+++ b/Documentation/Meeting Minutes/Minutes - 2025-11-5.md
@@ -10,3 +10,18 @@ Date: 11-10-2025
 * All members (save for Lewis) complete Interface with Others section, so that Lewis (in charge of power) can start working more efficiently on his documentation.
 * Wednesday meeting focus on Interfaces (group up together). Refer to feedback from Van Neste and notes from Storm.
 * Have Interfaces and Diagrams sections finished by Monday
+
+
+Date: 11-12-2025
+
+* All members worked on power diagram and piece movement logic. Each pair of people that had an Interface section in common discussed interactions with each other. 
+
+
+Date: 11-17-2025
+
+* Noah presented updated information about cooling the stepper driver boards and securing the MOSFET from electrical kickback.
+* Nathan presented 3D CAD model of board (discard "piles" (2x8 grids) in front of each respective player, with the playing field centered in between those grids.
+
+Questions for Storm:
+  * Temperature concerns (fans into case/ventilation, wood construction materials + spacers between electric components)
+  * Structural concerns (transparent top piece material: plexiglass, transparent plastic, acryllic; handles on shorter ends of rectangular board)
