Update Minutes - 2025-11-5.md

--- a/Documentation/Meeting Minutes/Minutes - 2025-11-5.md
+++ b/Documentation/Meeting Minutes/Minutes - 2025-11-5.md
@@ -14,7 +14,11 @@ Date: 11-10-2025
 
 Date: 11-12-2025
 
-* All members worked on power diagram and piece movement logic. Each pair of people that had an Interface section in common discussed interactions with each other. 
+* All members worked on power diagram and piece movement logic. Each pair of people that had an Interface section in common discussed interactions with each other.
+
+Questions for Storm:
+  * Temperature concerns (fans into case/ventilation, wood construction materials + spacers between electric components)
+  * Structural concerns (transparent top piece material: plexiglass, transparent plastic, acryllic; handles on shorter ends of rectangular board)
 
 
 Date: 11-17-2025
@@ -22,6 +26,5 @@ Date: 11-17-2025
 * Noah presented updated information about cooling the stepper driver boards and securing the MOSFET from electrical kickback.
 * Nathan presented 3D CAD model of board (discard "piles" (2x8 grids) in front of each respective player, with the playing field centered in between those grids.
 
-Questions for Storm:
-  * Temperature concerns (fans into case/ventilation, wood construction materials + spacers between electric components)
-  * Structural concerns (transparent top piece material: plexiglass, transparent plastic, acryllic; handles on shorter ends of rectangular board)
+* Nathan tasked with checking sheer force for top board and add ventilation (and fans? + Lewis)
+* Nathan tasked with asking customer and advisor if they are available during presentation period (to help Storm decide timeslot)
