--- a/Documentation/Meeting Minutes/Minutes - 2025-11-24.md
+++ b/Documentation/Meeting Minutes/Minutes - 2025-11-24.md
@@ -2,5 +2,6 @@
 Date: 11-24-2025
 
 * Nathan presented board specs, dimensions, and model. We discussed surface and chassis material for the board (box). Use Pilot Holes!
+* Go to Design Expo on Thursday; 11-12
 * Questions for Storm:
-  1.) Ask about wire requirements (jumper wires + solder, passthrough headers???)
+* 1.) Ask about wire requirements (jumper wires + solder, passthrough headers???)
