Update Minutes - 2026-01-21.md

--- a/Documentation/Meeting Minutes/Minutes - 2026-01-21.md
+++ b/Documentation/Meeting Minutes/Minutes - 2026-01-21.md
@@ -3,4 +3,11 @@ Date: 01-21-2026
 
 * Small meeting time during Capstone 2 Wednesday period 
 * Group testing time scheduled for Friday afternoon at 2:30
-* coconut + spam???
+
+## Meeting Minutes
+Date: 01-28-2026
+
+* Rough draft of presentations on Wednesday
+* Try and do full presentation following Monday
+* Discuss parts order with Van Neste week after Storm presentations
+* Team Bob - Board Games
