Update Minutes - 2026-02-02.md

--- a/Documentation/Meeting Minutes/Minutes - 2026-02-02.md
+++ b/Documentation/Meeting Minutes/Minutes - 2026-02-02.md
@@ -8,4 +8,5 @@ Date: 02-02-2026
 
 Date: 02-04-2026
 
-* ....
+* All team members gave presentations and got feedback
+* Discuss parts ordering (do it next Wednesday?)
