--- a/Documentation/Meeting Minutes/Minutes - 2026-02-02.md
+++ b/Documentation/Meeting Minutes/Minutes - 2026-02-02.md
@@ -4,7 +4,8 @@ Date: 02-02-2026
 * Plan to meet up Wednesday for rough draft overview of presentation
 * Questions for Storm:
 * 1.) Ask about progress on grading Detailed Design 
-* 2.) Ask about presentation (rough time, focus - parts biggest focus?, how professional
+* 2.) Ask about presentation (rough time, focus - parts biggest focus?, how professional)
+* Answers: 10 - 15 minutes (but no minimum, focus on parts; lead with brief overview of function, can be a little funny)
 
 Date: 02-04-2026
 
