--- a/Documentation/Meeting Minutes/Minutes - 2026-02-08.md
+++ b/Documentation/Meeting Minutes/Minutes - 2026-02-08.md
@@ -1,8 +1,8 @@
 ## Meeting Minutes
 Date: 02-08-2026
 
-* All members gave presentations to Storm (Lewis gave presentation Tuesday morning)
+* All members gave presentations to Storm (Lewis recorded presentation Tuesday morning)
 
 Date: 02-10-2026
 
-* parts ordering!!!
+* Planned to have each member put parts in by Monday, before reviewing with Storm
