Update Minutes - 2026-02-16.md

--- a/Documentation/Meeting Minutes/Minutes - 2026-02-16.md
+++ b/Documentation/Meeting Minutes/Minutes - 2026-02-16.md
@@ -1,5 +1,8 @@
 ## Meeting Minutes
 Date: 02-16-2026
 
-* Group checked parts list with Storm (after putting in parts by Monday)
-* Group decided to check parts list with advisor (Van Neste) as well (?)
+* Group finished parts list
+* Group decided to check parts list with advisor (Van Neste) as well
+* Received acryllic sheet from Dr. Van Neste for top of chessboard (box)
+* Jack tested "leftover" Pi5 to make sure it was suitable for our project. He plans to use this week to get familiar with it.
+* Group aims to make construction plans on Wed.
