Update Minutes - 2026-02-16.md

--- a/Documentation/Meeting Minutes/Minutes - 2026-02-16.md
+++ b/Documentation/Meeting Minutes/Minutes - 2026-02-16.md
@@ -6,3 +6,12 @@ Date: 02-16-2026
 * Received acryllic sheet from Dr. Van Neste for top of chessboard (box)
 * Jack tested "leftover" Pi5 to make sure it was suitable for our project. He plans to use this week to get familiar with it.
 * Group aims to make construction plans on Wed.
+
+Date: 02-18-2026
+
+* Ask Storm about requirements and process for minimal functional prototype
+* Noah figure out how to code to Arduino, assemble libraries, step/dir signals
+* Nathan look into sending display data to buffer, print pieces, 
+* Jack needs to focus on main outputs and processing algorithms
+* Lewis focus on common ground (later electrical stress testing, use meters to analyze power from wall to UPS to rest of system, test Pi packages, test power sections for all subsystems)
+* Allison print brackets and other printable parts
